<resources>
    <string name="app_name">LoginByBmob</string>
    <string name="text_login">登录</string>
    <string name="text_appDescribe">一个访问Bmob后端云的登录demo</string>
    <string name="text_userHint">账号/手机号</string>
    <string name="text_password">密码</string>
    <string name="text_forgetPwd">忘记密码?</string>
    <string name="text_register">注册</string>
    <string name="text_confirmPwd">确认密码</string>
</resources>